--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Exclude the results that you may have produced in past experiments
 results/
 batch_test.sh
+tabular_test.sh
 
 # Exclude libraries etc.
 tb_logs/
