--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -18,9 +18,9 @@ buffer_cpu_only: True # If true we won't keep all of the replay buffer in vram
 
 # --- Logging options ---
 use_tensorboard: False # Log results to tensorboard
-save_model: True # Save the models to disk
+save_model: False # Save the models to disk
 save_model_interval: 25000 # Save models after this many timesteps
-checkpoint_path: "/home/ylab/experiments/MAPS/results/sacred/S7x7_4Boxes/MAPS#2022-08-17-16:08:27/model" # Load a checkpoint from this path
+checkpoint_path: "" # Load a checkpoint from this path
 evaluate: False # Evaluate model for test_nepisode episodes and quit (no training)
 load_step: 0 # Load model trained on this many timesteps (0 if choose max possible)
 save_replay: False # Saving the replay of the model loaded from checkpoint_path
@@ -28,8 +28,8 @@ local_results_path: "results" # Path for local results
 
 # --- RL hyperparameters ---
 gamma: 0.99
-batch_size: 1 # Number of episodes to train on
-buffer_size: 1 # Size of the replay buffer
+batch_size: 32 # Number of episodes to train on
+buffer_size: 32 # Size of the replay buffer
 epsilon_anneal_time: 50000 # Number of time steps until exploration has finished
 lr: 0.0005 # Learning rate for agents
 critic_lr: 0.0005 # Learning rate for critics
