--- a/src/config/default.yaml
+++ b/src/config/default.yaml
@@ -40,7 +40,7 @@ grad_norm_clip: 10 # Reduce magnitude of gradients above this L2 norm
 # --- Agent parameters ---
 agent: "rnn" # Default rnn agent
 rnn_hidden_dim: 128 # Size of hidden state for default rnn agent
-obs_agent_id: False # Include the agent's one_hot id in the observation
+obs_agent_id: True # Include the agent's one_hot id in the observation
 obs_last_action: True # Include the agent's last action (one_hot) in the observation
 
 # --- Experiment running params ---
