--- a/src/config/algs/coma.yaml
+++ b/src/config/algs/coma.yaml
@@ -6,10 +6,10 @@ epsilon_finish: .01
 epsilon_anneal_time: 100000
 mask_before_softmax: False
 
-runner: "parallel"
+runner: "episode" # "parallel"
 
 buffer_size: 8
-batch_size_run: 8
+batch_size_run: 1
 batch_size: 8
 
 env_args:
