--- a/src/config/envs/adv_coverage.yaml
+++ b/src/config/envs/adv_coverage.yaml
@@ -7,7 +7,7 @@ env: "mrac"            # a grid-world for adversarial coverage
 env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
-    map: "T4x4"     # A specified setup of the environment
+    map: "Z7_Necessary1"     # A specified setup of the environment
     # RECOMMENDED MAPS: T9x9_Hard || T8x8_Hard || T7x7_Hard || T6x6_Hard || T5x5_Hard || T3x3_Basic || S7x7_4Boxes
  
     random_config: False    # if enabled (True), obtacles and threats are located randomly (override obstacles\threats_location), based on:
@@ -47,5 +47,5 @@ env_args:
 
     episode_limit: 100      # maximum number of time steps per episode
 
-t_max: 1500000              # number of time steps of the experiment
+t_max: 5000 # 1500000              # number of time steps of the experiment
 
