--- a/maps/coverage_maps/Z7_Peripherial1.yaml
+++ b/maps/coverage_maps/Z7_Peripherial1.yaml
@@ -2,7 +2,7 @@
 
 agents_placement: [[0, 2]]
 n_agents: 1
-obstacles_location: [[0, 1], [1, 1], [1, 2], [1, 4], [3, 3], [4, 1], [4, 5], [5, 2]], [5, 4]
+obstacles_location: [[0, 1], [1, 1], [1, 2], [1, 4], [3, 3], [4, 1], [4, 5], [5, 2], [5, 4]]
 threat_location: [[2, 0, 0.3 ],
  [0, 5, 0.09],
  [0, 6, 0.21],
