--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,13 @@
             "console": "integratedTerminal"
         },
         {
+            "name": "Classic MRHAC",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/classic/het_mrac.py",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "PyMARL_MAPS",
             "type": "python",
             "request": "launch",
@@ -62,6 +69,20 @@
             "args": [
                 "--config=ppo",
                 "--env-config=adv_coverage",
+                "with",
+                "obs_agent_id=True",
+                "-d"
+            ]
+        },
+        {
+            "name": "PyMARL_DCG",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/main.py",
+            "console": "integratedTerminal",
+            "args": [
+                "--config=dcg",
+                "--env-config=het_adv_coverage",
                 "with",
                 "obs_agent_id=True",
                 "-d"
