--- a/src/config/envs/adv_coverage.yaml
+++ b/src/config/envs/adv_coverage.yaml
@@ -7,7 +7,7 @@ env: "mrac"            # a grid-world for adversarial coverage
 env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
-    map: "Z7_Peripherial1"     # A specified setup of the environment
+    map: "Random_Map3"     # A specified setup of the environment
     # RECOMMENDED MAPS: T9x9_Hard || T8x8_Hard || T7x7_Hard || T6x6_Hard || T5x5_Hard || T3x3_Basic || S7x7_4Boxes
  
     random_config: False    # if enabled (True), obtacles and threats are located randomly (override obstacles\threats_location), based on:
@@ -18,13 +18,13 @@ env_args:
     risk_std: 0.2           # ... ... standard deviation of threats risk
 
     observation_range: -1   # radius of observation, -1 means full observability
-    observe_ids: True       # observation includes agents' ids
+    observe_ids: False      # observation includes agents' ids
     observe_state: False    # whether an observation is only partial (False) or central including agent position (True)
     watch_covered: True     # observe which cells was covered and which wasn't
     watch_surface: True     # observe where obstacles and threat are located
 
     allow_collisions: False # "True" allow two agents to be in the same cell
-    allow_stay: False       # does agents can do "nothing action"
+    allow_stay: True        # does agents can do "nothing action"
     default_action: 4       # The "do nothing" action
 
     # Enhance performances by controlling the actual risk
@@ -38,7 +38,7 @@ env_args:
     reward_invalid: 0.0     # negative reward for trying to make an invalid move
     reward_succes: 25.0     # positive reward given if grid is fully covered
     reward_threat: 1.0      # factor for the threat reward, based on the MRAC reward function
-    reward_time: -0.2       # negative reward for every timestep #! CHECK BEHAVIOR FOR R=1.0!!!
+    reward_time: -1.0       # negative reward for every timestep #! CHECK BEHAVIOR FOR R=1.0!!!
 
     # Logging options
     log_env: True           # collect and print log of agents performance
@@ -47,5 +47,5 @@ env_args:
 
     episode_limit: 100      # maximum number of time steps per episode
 
-t_max: 5000 # 1500000              # number of time steps of the experiment
+t_max: 500000 # 1500000              # number of time steps of the experiment
 
