--- a/docker/Dockerfile_old
+++ b/docker/Dockerfile_old
@@ -1,5 +1,5 @@
 FROM nvidia/cuda:10.2-cudnn7-devel-ubuntu18.04
-# MAINTAINER Wendelin Boehmer (of the PyMARL original: Tabish Rashid)
+MAINTAINER Wendelin Boehmer (of the PyMARL original: Tabish Rashid)
 
 # CUDA includes
 ENV CUDA_PATH /usr/local/cuda
