--- a/src/config/envs/het_adv_coverage.yaml
+++ b/src/config/envs/het_adv_coverage.yaml
@@ -7,7 +7,7 @@ env: "het_mrac"            # a grid-world for adversarial coverage
 env_args:
     random_seed: null       # defines np random seed for reproducability of tests
 
-    map: "HScattered_Threats2"      # A specified setup of the environment
+    map: "HScattered_Threats1"      # A specified setup of the environment
     # RECOMMENDED MAPS: HScattered_Threats2 | HScattered_Threats1
  
     random_config: False    # if enabled (True), obtacles and threats are located randomly (override obstacles\threats_location), based on:
@@ -45,5 +45,5 @@ env_args:
 
     episode_limit: 100      # maximum number of time steps per episode
 
-t_max: 1500000              # number of time steps of the experiment
+t_max: 1000              # number of time steps of the experiment
 
