--- a/src/classic/config/classic_default.yaml
+++ b/src/classic/config/classic_default.yaml
@@ -1,5 +1,5 @@
 
-map: "HScattered_ThreatsE2" # "Random_Map3" # "Connected_Areas2" "HConnected_AreasE1", HScattered_ThreatsE1
+map: "Connected_Areas1" # "Random_Map3" # "Connected_Areas2" "HConnected_AreasE1", HScattered_ThreatsE1
 
 test_nepisode: 1000
 episode_limit: 100        # maximum number of time steps per episode
