--- a/maps/het_coverage_maps/HConnected_Areas2.yaml
+++ b/maps/het_coverage_maps/HConnected_Areas2.yaml
@@ -1,72 +1,49 @@
 # A map for advarserial coverage environment
 
-agents_placement: [[9, 0], [9, 1], [9, 2], [4, 2], [4, 3], [4, 4], [3, 6]]    # if random_placement is False, location can be specified
-agents_type: [0, 1, 2, 0, 1, 2, 0]
-n_agents: 7
+agents_placement: [[1, 1], [3, 5], [5, 2]]    # if random_placement is False, location can be specified
+agents_type: [0, 0, 1]
+n_agents: 3
 
 # Obstacles are defined as follows: [X, Y]
 obstacles_location: [
-    [1, 3], [2, 5], [2, 6], [3, 2], [3, 7], [5, 3], [6, 2], [6, 4], [6, 7], [6, 8], [7, 1], [7, 5], [7, 6]
+    [0, 1], [2, 4], [3, 4], [4, 2], [5, 1], [5, 5]
 ]  # specified location of obstacles in the grid
 
 # Threats are defined as follows: [X, Y, INTENSITY, TYPE]
 threat_location: [
-    [0, 2, 0.3, 0],
-    [0, 3, 0.3, 0],
-    [1, 2, 0.3, 0],
-    [2, 2, 0.2, 0],
-    [2, 3, 0.2, 0],
-    [4, 3, 0.2, 0],
-    [3, 9, 0.3, 0],
-    [4, 7, 0.3, 0],
-    [4, 8, 0.6, 0],
-    [4, 9, 0.3, 0],
-    [5, 7, 0.3, 0],
-    [5, 8, 0.3, 0],
+    [0, 0, 0.4, 0],
+    [1, 0, 0.4, 0],
+    [2, 0, 0.3, 0],
+    [3, 0, 0.3, 0],
+    [4, 0, 0.5, 0],
+    [1, 3, 0.5, 0],
+    [1, 4, 0.1, 0],
+    [6, 2, 0.4, 0],
     [6, 3, 0.3, 0],
-    [7, 2, 0.3, 0],
-    [7, 3, 0.3, 0],
-    [7, 4, 0.3, 0],
-    [8, 1, 0.2, 0],
-    [8, 2, 0.2, 0],
-    [8, 3, 0.3, 0],
-    [2, 0, 0.4, 1],
-    [3, 0, 0.4, 1],
-    [4, 0, 0.4, 1],
-    [5, 0, 0.4, 1],
-    [3, 1, 0.4, 1],
-    [7, 7, 0.2, 1],
-    [7, 8, 0.2, 1],
-    [8, 6, 0.3, 1],
-    [8, 7, 0.3, 1],
-    [8, 8, 0.3, 1],
-    [9, 6, 0.3, 1],
-    [0, 5, 0.2, 2],
-    [0, 6, 0.2, 2],
-    [0, 7, 0.2, 2],
-    [0, 8, 0.2, 2],
-    [1, 5, 0.2, 2],
-    [1, 6, 0.8, 2],
-    [1, 7, 0.8, 2],
-    [1, 8, 0.2, 2],
-    [4, 5, 0.5, 2],
-    [5, 4, 0.5, 2],
-    [5, 5, 0.5, 2],
-    [6, 5, 0.5, 2],
-    [8, 9, 0.4, 2],
-    [9, 7, 0.4, 2],
-    [9, 8, 0.4, 2],
-    [9, 9, 0.4, 2],
+    [6, 4, 0.4, 0],
+    [6, 5, 0.2, 0],
+
+    [0, 3, 0.2, 1],
+    [0, 4, 0.3, 1],
+    [0, 5, 0.3, 1],
+    [1, 5, 0.5, 1],
+    [1, 6, 0.4, 1],
+    [2, 2, 0.5, 1],
+    [3, 2, 0.5, 1],
+    [4, 5, 0.4, 1],
+    [4, 6, 0.6, 1],
+    [5, 6, 0.6, 1],
+    [6, 6, 0.1, 1],
+
 ]     # specified location and severty of threats in the grid
 
 # Types matrix is n_agents on n_types matrix. The [i,j] cell describes the threat on agent of type i in a threatened cell of type j
 # if types matrix is smaller than n_agents x n_types, an error is raised
 types_matrix: [
-    [1.0, 0.7, 0.2],
-    [0.2, 1.0, 0.7],
-    [0.7, 0.2, 1.0],
+    [1.0, 0.3],
+    [0.3, 1.0]
 ]
 
 toroidal: False         # whether the world is bounded (False) or toroidal (True)
-world_shape: [10, 10]     # the shape of the grid-world [height, width]
+world_shape: [7, 7]     # the shape of the grid-world [height, width]
 random_placement: False # location of agents is randomized every episode
