--- a/maps/het_coverage_maps/HScattered_Threats1_Conf1.yaml
+++ b/maps/het_coverage_maps/HScattered_Threats1_Conf1.yaml
@@ -1,56 +1,48 @@
 # A map for advarserial coverage environment
 
-agents_placement: [[2, 3], [5, 4], [4, 2]]    # if random_placement is False, location can be specified
-agents_type: [0, 1, 2]
-n_agents: 3
+agents_placement: [[3, 2], [5, 6], [0, 0], [2, 3]]    # if random_placement is False, location can be specified
+agents_type: [0, 1, 0, 1]
+n_agents: 4
 
 # Obstacles are defined as follows: [X, Y]
 obstacles_location: [
     [1, 1],
     [2, 2],
-    [1, 3],
-    [1, 6],
+    [1, 5],
     [2, 6],
-    [3, 6],
-    [4, 4],
-    [5, 2],
-    [5, 3],
-    [6, 6],
-    [7, 1]
+    [3, 4],
+    [4, 3],
+    [5, 1],
+    [6, 2],
+    [5, 5],
+    [6, 6]
 ]  # specified location of obstacles in the grid
 
 # Threats are defined as follows: [X, Y, INTENSITY, TYPE]
 threat_location: [
-    [0, 4, 0.4, 0],
-    [1, 4, 0.3, 0],
-    [2, 4, 0.3, 0],
+    [0, 5, 0.2, 0],
+    [2, 1, 0.3, 0],
+    [2, 5, 0.3, 0],
+    [2, 7, 0.5, 0],
     [5, 0, 0.1, 0],
-    [6, 0, 0.3, 0],
-    [7, 0, 0.8, 0],
-    [7, 5, 0.5, 0],
-    [7, 6, 0.3, 0],
-    [7, 7, 0.3, 0],    
-    [0, 1, 0.6, 1],
-    [0, 2, 0.6, 1],
-    [0, 3, 0.3, 1],
-    [1, 2, 0.3, 1],
-    [5, 1, 0.7, 1],
-    [5, 6, 0.5, 1],
-    [5, 7, 0.4, 1],
-    [6, 7, 0.4, 1],
-    [2, 1, 0.9, 2],
-    [3, 1, 0.6, 2],
-    [4, 5, 0.6, 2],
-    [5, 5, 0.2, 2],
-    [6, 5, 0.6, 2]
+    [5, 2, 0.5, 0],
+    [5, 7, 0.2, 0],
+    [6, 7, 0.3, 0],
+    [0, 0, 0.4, 1],
+    [0, 1, 0.4, 1],
+    [1, 4, 0.3, 1],
+    [3, 2, 0.2, 1],
+    [4, 5, 0.4, 1],
+    [6, 0, 0.7, 1],
+    [6, 3, 0.6, 1],
+    [7, 5, 0.3, 1],
 ]     # specified location and severty of threats in the grid
 
 # Types matrix is n_agents on n_types matrix. The [i,j] cell describes the threat on agent of type i in a threatened cell of type j
 # if types matrix is smaller than n_agents x n_types, an error is raised
 types_matrix: [
-    [1.0, 0.6, 0.2],
-    [0.2, 1.0, 0.6],
-    [0.6, 0.2, 1.0],
+    [1.0, 0.4],
+    [0.4, 1.0]
 ]
 
 toroidal: False         # whether the world is bounded (False) or toroidal (True)
