--- a/maps/het_coverage_maps/HScattered_Threats1_Conf4.yaml
+++ b/maps/het_coverage_maps/HScattered_Threats1_Conf4.yaml
@@ -1,50 +1,48 @@
 # A map for advarserial coverage environment
 
-agents_placement: [[1, 3], [1, 2], [4, 3]]    # if random_placement is False, location can be specified
-agents_type: [0, 1, 1]
-n_agents: 3
+agents_placement: [[7, 6], [4, 2], [5, 6], [5, 3]]    # if random_placement is False, location can be specified
+agents_type: [0, 1, 0, 1]
+n_agents: 4
 
 # Obstacles are defined as follows: [X, Y]
 obstacles_location: [
-    [1, 4],
+    [1, 1],
     [2, 2],
-    [2, 3],
+    [1, 5],
     [2, 6],
-    [3, 1],
-    [3, 6],
-    [4, 2],
-    [4, 4],
-    [6, 4],
+    [3, 4],
+    [4, 3],
+    [5, 1],
+    [6, 2],
+    [5, 5],
+    [6, 6]
 ]  # specified location of obstacles in the grid
 
 # Threats are defined as follows: [X, Y, INTENSITY, TYPE]
 threat_location: [
-    [0, 1, 0.2, 0],
-    [2, 0, 0.6, 0],
-    [2, 1, 0.6, 0],
-    [2, 4, 0.4, 0],
-    [3, 3, 0.4, 0],
-    [6, 3, 0.4, 0],
-    [6, 7, 0.4, 0],
-    [7, 0, 0.2, 0],
-    [7, 1, 0.2, 0],
-    [7, 7, 0.5, 0],
-
-    [0, 5, 0.9, 1],
-    [1, 7, 0.4, 1],
-    [2, 7, 0.4, 1],
-    [4, 6, 0.7, 1],
-    [5, 1, 0.3, 1],
-    [5, 4, 0.6, 1],
-    [5, 5, 0.8, 1],
-    [6, 0, 0.3, 1],
+    [0, 5, 0.2, 0],
+    [2, 1, 0.3, 0],
+    [2, 5, 0.3, 0],
+    [2, 7, 0.5, 0],
+    [5, 0, 0.1, 0],
+    [5, 2, 0.5, 0],
+    [5, 7, 0.2, 0],
+    [6, 7, 0.3, 0],
+    [0, 0, 0.4, 1],
+    [0, 1, 0.4, 1],
+    [1, 4, 0.3, 1],
+    [3, 2, 0.2, 1],
+    [4, 5, 0.4, 1],
+    [6, 0, 0.7, 1],
+    [6, 3, 0.6, 1],
+    [7, 5, 0.3, 1],
 ]     # specified location and severty of threats in the grid
 
 # Types matrix is n_agents on n_types matrix. The [i,j] cell describes the threat on agent of type i in a threatened cell of type j
 # if types matrix is smaller than n_agents x n_types, an error is raised
 types_matrix: [
-    [1.0, 0.15],
-    [0.15, 1.0]
+    [1.0, 0.4],
+    [0.4, 1.0]
 ]
 
 toroidal: False         # whether the world is bounded (False) or toroidal (True)
