--- a/src/classic/config/classic_default.yaml
+++ b/src/classic/config/classic_default.yaml
@@ -1,11 +1,12 @@
 
-map: "Connected_Areas1" # "Random_Map3" # "Connected_Areas2" "HConnected_AreasE1", HScattered_ThreatsE1
+heterogeneous: True
+map: "HConnected_Areas2" # "Random_Map3" # "Connected_Areas2" "HConnected_AreasE1", HScattered_ThreatsE1
 
-test_nepisode: 1000
+test_nepisode: 100
 episode_limit: 100        # maximum number of time steps per episode
 
 threat_levels: 4          # No. tiers of threats
 max_density: 4            # Maximal ratio between robots and area cells in the initial allocation
-graph_function: "OPTIMIZED"  # "ORIGIN" for RoiECAI16; "SURV" for the fixed heuristic; "OPTIMIZED" for the optimization criteria heuristic
+graph_function: "ORIGIN"  # "ORIGIN" for RoiECAI16; "SURV" for the fixed heuristic; "OPTIMIZED" for the optimization criteria heuristic
 
-optim_alpha: 0.1         # Value of alpha of optimization criteria (E[X] - alpha * [T])
+optim_alpha: 1.0         # Value of alpha of optimization criteria (E[X] - alpha * [T])
